--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytube = "^11.0.1"
 youtube_dl = "^2021.6.6"
 discord = "^1.7.3"
 python-youtube = "^0.8.1"
+PyNaCl = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 
